--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
 .block_majhub div.reviews .review .picture { width:40px; float:left; margin-top:-2px; }
 .block_majhub div.reviews .review .rating { float:left; }
 .block_majhub div.reviews .review .rating .stars img { width:12px; height:12px; }
-.block_majhub div.reviews .review .proscons { float:left; margin-right:-20px; }
+.block_majhub div.reviews .review .proscons { float:left; }
 .block_majhub div.reviews .review .proscons img { margin:-2px 1px -3px 1px; }
 .block_majhub div.reviews .review .fullname { float: right; }
 .block_majhub div.reviews .review .fullname .moderator { width: 100%; font-weight:bold; }
